# obj_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-assets.cmake  obj_loader.cpp
assets/shaders/: model.fs  model.vs
include/: arcballcamera.h  camera.h  camera.hpp  engine.h  engine.hpp  input.hpp  mesh.h  mesh.hpp  obj_loader.h  shader.h  shader.hpp
src/: arcballcamera.cpp  camera.cpp  engine.cpp  main.cpp  mesh.cpp  obj_loader.cpp  shader.cpp
